[gd_scene load_steps=3 format=3 uid="uid://byku6wanllr5n"]

[ext_resource type="Script" uid="uid://dvhuvkhpnc0p2" path="res://addons/rome/system/debug_system.gd" id="1_b2ay2"]

[sub_resource type="LabelSettings" id="LabelSettings_1rwrb"]
resource_local_to_scene = true
font_size = 12
font_color = Color(1, 1, 0, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="Debug" type="Node"]
script = ExtResource("1_b2ay2")

[node name="Canvas" type="CanvasLayer" parent="."]
layer = 110

[node name="Labels" type="Node2D" parent="Canvas"]
unique_name_in_owner = true
top_level = true
position = Vector2(8, 8)

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas/Labels"]
offset_right = 84.0
offset_bottom = 32.0
mouse_filter = 2

[node name="FPSLabel" type="Label" parent="Canvas/Labels/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "General Label"
metadata/_edit_use_anchors_ = true

[node name="WarningLabel" type="Label" parent="Canvas/Labels/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Warning"
label_settings = SubResource("LabelSettings_1rwrb")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Canvas/Labels/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "General Label"
metadata/_edit_use_anchors_ = true

[node name="DebugWindow" type="Window" parent="."]
unique_name_in_owner = true
process_mode = 3
process_priority = 100
process_physics_priority = 100
disable_3d = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
canvas_item_default_texture_filter = 0
gui_disable_input = true
oversampling_override = 1.0
title = "Debug Info"
position = Vector2i(0, 36)
size = Vector2i(720, 800)
visible = false
wrap_controls = true
transient = true
unfocusable = true
min_size = Vector2i(80, 80)
max_size = Vector2i(1600, 1600)
content_scale_mode = 1
content_scale_aspect = 1
content_scale_stretch = 1
content_scale_factor = 2.0

[node name="Canvas" type="CanvasLayer" parent="DebugWindow"]
layer = 110

[node name="Labels" type="Node2D" parent="DebugWindow/Canvas"]
top_level = true
position = Vector2(8, 8)

[node name="VBoxContainer" type="VBoxContainer" parent="DebugWindow/Canvas/Labels"]
offset_right = 84.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WatchListLabel" type="RichTextLabel" parent="DebugWindow/Canvas/Labels/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/paragraph_separation = 1
bbcode_enabled = true
text = "Watchlist"
fit_content = true
autowrap_mode = 0
tab_size = 2
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false
metadata/_edit_use_anchors_ = true

[node name="CustomLogWindow" type="Window" parent="."]
unique_name_in_owner = true
process_mode = 3
process_priority = 100
process_physics_priority = 100
auto_translate_mode = 1
disable_3d = true
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
canvas_item_default_texture_filter = 0
oversampling_override = 1.0
title = "Log"
position = Vector2i(100, 100)
size = Vector2i(1000, 400)
visible = false
wrap_controls = true
transient = true
min_size = Vector2i(80, 80)
max_size = Vector2i(2000, 1600)
content_scale_mode = 1
content_scale_aspect = 1
content_scale_stretch = 1
content_scale_factor = 2.0

[node name="CanvasLayer" type="CanvasLayer" parent="CustomLogWindow"]
layer = 110

[node name="ScrollContainer" type="ScrollContainer" parent="CustomLogWindow/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="CustomLogList" type="VBoxContainer" parent="CustomLogWindow/CanvasLayer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[connection signal="close_requested" from="DebugWindow" to="DebugWindow" method="hide"]
[connection signal="close_requested" from="CustomLogWindow" to="CustomLogWindow" method="hide"]
